# bmp-loader

./: .gitignore  CMakeLists.txt  README.md  bmp.cpp  bmp.h  test.cpp
